# data-architecture

./: README.md  pyproject.toml  requirements.txt
data_mesh/: main.py
data_mesh/api/: catalog_service.py  quality_service.py
data_mesh/catalog/: catalog.py
data_mesh/governance/: policy_engine.py
data_mesh/lineage/: lineage_service.py
data_mesh/quality/: engine.py  monitor.py  quality_service.py
docs/: README.md  SolutionDesignWealthManagementDataArchitecture.md
docs/additional/: data-catalog-implementation.md  data-catalog-ui-design.md  data-mesh-governance.md  data-mesh-integration.md  data-mesh-migration-implementation.md  data-mesh-operations.md  data-mesh-security.md  data-mesh-testing.md  data-quality-framework-implementation.md  data-quality-framework.md  implementation-estimate.md  implementation-guide.md  legacy-migration-strategy.md  security-controls-matrix.md
docs/diagrams/: cicd-architecture.puml  data-flow.puml  high-level-architecture.puml  security-architecture.puml
tests/: test_catalog_service.py  test_lineage_service.py  test_quality.py  test_quality_service.py
