[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-mesh"
version = "0.1.0"
description = "A data mesh implementation for modern data architecture"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "psycopg2-binary>=2.9.0",
    "kafka-python>=2.0.0",
    "pytest>=6.2.0",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=2.12.0",
    "black>=21.7b0",
    "isort>=5.9.0",
    "mypy>=0.910",
    "prometheus-client>=0.11.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.5",
    "boto3>=1.18.0",
    "great-expectations>=0.14.0",
    "apache-airflow>=2.2.0",
    "pyspark>=3.2.0",
    "tenacity>=8.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=2.12.0",
    "black>=21.7b0",
    "isort>=5.9.0",
    "mypy>=0.910",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=data_mesh --cov-report=term-missing" 